# OblFfmpeg

./: settings.gradle
app/: build.gradle
app/src/main/java/com/m4399/videoeditor/adapter/: VideoAdapter.java
app/src/main/java/com/m4399/videoeditor/core/: VideoEditor.java
app/src/main/java/com/m4399/videoeditor/ui/: MainActivity.java  VideoClipActivity.java
app/src/main/res/layout/: activity_main.xml  activity_video_clip.xml
ffmpeg-cmd/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
oblffmpeglib/: build.gradle
oblffmpeglib/src/androidTest/java/top/jplayer/oblffmpeglib/: ExampleInstrumentedTest.java
oblffmpeglib/src/main/: AndroidManifest.xml
oblffmpeglib/src/main/cpp/: CMakeLists.txt
oblffmpeglib/src/main/cpp/include/ffmpeg/: android_log.h  cmdutils.c  cmdutils.h  ffmpeg.c  ffmpeg.h  ffmpeg_cmd.c  ffmpeg_filter.c  ffmpeg_opt.c  ffmpeg_thread.c  ffmpeg_thread.h
oblffmpeglib/src/main/cpp/include/libavcodec/: mathops.h
oblffmpeglib/src/main/cpp/include/libavcodec/arm/: mathops.h
oblffmpeglib/src/main/cpp/include/libavformat/: avformat.h  network.h  os_support.h  url.h
oblffmpeglib/src/main/cpp/include/libavresample/: avresample.h  version.h
oblffmpeglib/src/main/cpp/include/libavutil/: internal.h  libm.h  time_internal.h  timer.h
oblffmpeglib/src/main/cpp/include/libavutil/arm/: timer.h
oblffmpeglib/src/main/cpp/include/libswresample/: swresample.h
oblffmpeglib/src/main/java/top/jplayer/oblffmpeglib/: CmdInvoke.java  CmdList.java
oblffmpeglib/src/main/res/values/: strings.xml
oblffmpeglib/src/test/java/top/jplayer/oblffmpeglib/: ExampleUnitTest.java
